ヘッダーの色の変更

--- a/css/style.css
+++ b/css/style.css
@@ -255,7 +255,7 @@ body::before {
 .header_nav{
   height: 60px;
   width: 100%;
-  background-color: #E8EEEC;
+  background-color: linear-gradient(120deg,#f6d365 0,#fda085 100%);
   position: absolute;
 }
 
