--- a/css/style.css
+++ b/css/style.css
@@ -703,7 +703,7 @@ body::before {
   width: 30px;
 }
 
-.top_info{
+.top_info {
   font-size: 24px;
   font-weight: 2;
   margin-bottom: 10px;
@@ -721,7 +721,7 @@ body::before {
   }
 }*/
 
-.back_dark{
+.back_dark {
   background-color: #F5F5F5;
 }
 
@@ -738,7 +738,7 @@ body::before {
   margin-top: 20px;
 }
 
-.video{
+.video {
   position: relative;
   height: 0;
   padding: 30px 0 56.25%;
@@ -746,7 +746,7 @@ body::before {
   margin-top: 10px;
 }
 
-.video iframe{
+.video iframe {
   position: absolute;
   left: 0;
   right: 0;
@@ -757,24 +757,24 @@ body::before {
 
 
 /*footer関連*/
-.footer_wrapper{
+.footer_wrapper {
   background-color: #E8EEEC;
 }
 
-.footer_img img{
+.footer_img img {
   width: 120px;
   height: 120px;
   border-radius: 50%;
 }
 
-.footer_img{
+.footer_img {
   text-align: center;
   margin: 20px 0;
   font-size: 20px;
   font-weight: bold;
 }
 
-.footer_menu{
+.footer_menu {
   max-width: 1320px;
   margin: 0 auto;
   display: flex;
@@ -822,21 +822,21 @@ body::before {
   padding: 10px;
 }
 
-.left_space img{
+.left_space img {
   margin-bottom: 10px;
 }
 
 @media screen and (max-width: 830px) and (min-width: 0px) {
 
-  .sidebar{
+  .sidebar {
     display: none;
   }
 
-  .footer_wrapper{
+  .footer_wrapper {
     display: none;
   }
 
-  .footer_bottom{
+  .footer_bottom {
     font-size: 10px;
     height: 40px;
   }
@@ -846,96 +846,99 @@ body::before {
 /*Contact Form 7カスタマイズ*/
 /*スマホContact Form 7カスタマイズ*/
 @media(max-width:500px){
-  .inquiry th,.inquiry td {
-   display:block!important;
-   width:100%!important;
-   border-top:none!important;
-   -webkit-box-sizing:border-box!important;
-   -moz-box-sizing:border-box!important;
-   box-sizing:border-box!important;
+  .inquiry th,
+  .inquiry td {
+   display:block !important;
+   width:100% !important;
+   border-top:none !important;
+   -webkit-box-sizing:border-box! important;
+   -moz-box-sizing:border-box !important;
+   box-sizing:border-box !important;
   }
 
   .inquiry tr:first-child th{
-   border-top:1px solid #d7d7d7!important;
+   border-top: 1px solid #d7d7d7 !important;
   }
 
   /* 必須・任意のサイズ調整 */ 
-  .inquiry .haveto,.inquiry .any {  
-  font-size:10px;
+  .inquiry .haveto,
+  .inquiry .any {  
+  font-size: 10px;
   }
 }
 
-.inquiry{
+.inquiry {
   width: 100%;
 }
 
 /*見出し欄*/
-.inquiry th{
- text-align:left;
- font-size:18px;
- color:#444;
- padding:10px;
- width:40%;
- background:#f7f7f7;
- border:solid 1px #d7d7d7;
+.inquiry th {
+ text-align: left;
+ font-size: 18px;
+ color: #444;
+ padding: 10px;
+ width: 40%;
+ background :#f7f7f7;
+ border: solid 1px #d7d7d7;
 }
 /*通常欄*/
 .inquiry td{
- font-size:18px;
+ font-size: 18px;
  border:solid 1px #d7d7d7;
  padding: 10px;
 }
 
 
 /*横の行とテーブル全体*/
-.entry-content .inquiry tr,.entry-content table{
- border:solid 1px #d7d7d7;  
+.entry-content .inquiry tr,
+.entry-content table {
+ border: solid 1px #d7d7d7;  
 }
 /*必須の調整*/
-.haveto{
- font-size:10px;
- padding:5px;
- background:#ff9393;
- color:#fff;
- border-radius:2px;
- margin-right:5px;
- position:relative;
- bottom:1px;
+.haveto {
+ font-size: 10px;
+ padding: 5px;
+ background: #ff9393;
+ color: #fff;
+ border-radius: 2px;
+ margin-right: 5px;
+ position: relative;
+ bottom: 1px;
 }
 /*任意の調整*/
 .any{
- font-size:10px;
- padding:5px;
- background:#93c9ff;
- color:#fff;
- border-radius:2px;
- margin-right:5px;
- position:relative;
- bottom:1px;
+ font-size: 10px;
+ padding: 5px;
+ background: #93c9ff;
+ color: #fff;
+ border-radius: 2px;
+ margin-right: 5px;
+ position: relative;
+ bottom: 1px;
 }
 
 .wpcf7-form p{
   margin-top: 20px;
 }
 /*ラジオボタンを縦並び指定*/
-.verticallist .wpcf7-list-item{
- display:block;
+.verticallist .wpcf7-list-item {
+ display: block;
 }
 /*送信ボタンのデザイン変更*/
 #formbtn{
  display: block;
- padding:15px;
- width:350px;
- background:#ffaa56;
- color:#fff;
- font-size:18px;
- font-weight:bold;   
- border-radius:2px;
- margin:25px auto 0;
+ padding: 15px;
+ width: 350px;
+ background: #ffaa56;
+ color: #fff;
+ font-size: 18px;
+ font-weight: bold;   
+ border-radius:2 px;
+ margin: 25px auto 0;
 }
 /*送信ボタンマウスホバー時*/
-#formbtn:hover{
- background:#fff;
- color:#ffaa56;
- border:2px solid #ffaa56;
+#formbtn:hover {
+ background: #fff;
+ color: #ffaa56;
+ border: 2px solid #ffaa56;
 }
