警察官時代の職歴内容の修正

--- a/css/style.css
+++ b/css/style.css
@@ -786,6 +786,11 @@ body::before {
   color: red;
 }
 
+.bold {
+  font-weight: bold;
+  color: black;
+}
+
 .about_me{
   width: 34%;
   padding: 20px;
